discussion/kv_engine/159294/159294_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Implement NexusKVStore::getRange

Add checks to getRange to compare the results of both KVStores.

Change-Id: I037b742add30655d9ba08cf0c1bcc5877e341b27

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-08-19 17:01:21.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-19 19:00:28.000000000
Message: 
Patch Set 6: Verified+1

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38791/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11481/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33075/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10211/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1125/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21202/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12201/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1115/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13082/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13669/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13293/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-08-20 16:13:28.000000000
Message: 
Patch Set 6: Code-Review-1

(3 comments)
Line:517, engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc -> Perf: std::vector or std::deque is probably better as fewer memory allocations (for all the individual list nodes).

Line:519, engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc -> Nit: I don't think you need std::move() if the argument is already an rvalue reference (std::move is basically just a cast to an rvalue reference internally).

Line:544, engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc -> What about the item member of GetValue ?

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-08-24 17:20:15.000000000
MISMATCHED INLINE COMMENT
Line:517, engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-08-24 17:20:15.000000000
MISMATCHED INLINE COMMENT
Line:519, engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc -> I thought so too, but the compiler doesn't agree

In file included from ../third_party/gsl-lite/include/gsl/gsl-lite.hpp:24:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1881:31: error: call to deleted constructor of 'GetValue'
            ::new((void*)__p) _Up(_VSTD::forward<_Args>(__args)...);
                              ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1773:18: note: in instantiation of function template specialization 'std::__1::allocator<std::__1::__list_node<GetValue, void *> >::construct<GetValue, GetValue &>' requested here
            {__a.construct(__p, _VSTD::forward<_Args>(__args)...);}
                 ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1600:14: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<std::__1::__list_node<GetValue, void *> > >::__construct<GetValue, GetValue &>' requested here
            {__construct(__has_construct<allocator_type, _Tp*, _Args...>(),
             ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/list:1680:26: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<std::__1::__list_node<GetValue, void *> > >::construct<GetValue, GetValue &>' requested here
    __node_alloc_traits::construct(__na, _VSTD::addressof(__hold->__value_), _VSTD::forward<_Args>(__args)...);
                         ^
/Users/benhuddleston/Documents/couchbase/ee/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:555:26: note: in instantiation of function template specialization 'std::__1::list<GetValue, std::__1::allocator<GetValue> >::emplace_back<GetValue &>' requested here
        primaryGetValues.emplace_back(gv);
                         ^
../kv_engine/engines/ep/src/callbacks.h:61:5: note: 'GetValue' has been explicitly marked deleted here
    GetValue(const GetValue&) = delete;
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-08-24 17:20:15.000000000
MISMATCHED INLINE COMMENT
Line:544, engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc -> oops, misleading comment. We may be able to log the key if one is success so updated
----------------------------------------------------------------------------------------------------------------------
